--- a/Dockerfile_Version2.txt
+++ b/Dockerfile_Version2.txt
@@ -15,3 +15,34 @@ EXPOSE 8501
 
 # Run the Streamlit app when the container launches
 CMD ["streamlit", "run", "app.py"]
+
+
+# Use an official lightweight Python image
+FROM python:3.11-slim
+
+# Prevents Python from writing .pyc files
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+# Set the working directory
+WORKDIR /app
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements first (for caching)
+COPY requirements.txt .
+
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy project files
+COPY . .
+
+# Expose port for Streamlit
+EXPOSE 8501
+
+# Run Streamlit on Railway's $PORT
+CMD ["streamlit", "run", "app.py", "--server.port=$PORT", "--server.address=0.0.0.0"]
